2003-01-17  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests.cs: Removed System.Security.Cryptography from using.
	* System.Security_test.build: Simplified and fixed some issues.

2002-11-28  Sebastien Pouliot  <spouliot@videotron.ca>

	* AllTests.cs: New. Include System.Security.Cryptography.Xml
	test suites.
	* System.Security_test.build: New. Nant build file for Windows.