@@ -1,3 +1,9 @@
+2003-02-19  Sebastien Pouliot  <spouliot@videotron.ca>
+
+	* AllTests.cs: Removed. No more required with NUnit2.
+	* makefile.gnu, security_linux_test.args: untested makefile
+	* System.Security_test.build: Updated for NUnit2.
+
 2003-01-17  Sebastien Pouliot  <spouliot@videotron.ca>
 
 	* AllTests.cs: Removed System.Security.Cryptography from using.
